@@ -21,6 +21,7 @@ Bugfixes:
  - DS GX: Mask off invalid bits of the palette base
  - DS: Properly close save file on close
  - DS Video: Fix size of VRAM zeroes buffer
+ - DS GX: Fix depth test scaling
 Misc:
  - DS GX: Clean up and unify texture mapping
  - DS Core: Add symbol loading
